syntax = "proto3";

option java_multiple_files = true;
option java_package = "tech.claudioed.police.man.grpc";
option java_outer_classname = "PolicemanProto";
package policies;

service PoliceOfficer {
  rpc Registry (MessageData) returns (RegistryID) {}
}

message MessageData {
  string userId = 1;
  string threadId = 2;
  string content = 3;
  string messageId = 4;
}

message RegistryID {
  string id = 1;
}
